--- a/theme.conf
+++ b/theme.conf
@@ -3,11 +3,11 @@
 Background="Backgrounds/2160.png"
 ResX="1920"
 ResY="1080"
-TextColor="white"
-BackgroundColor="#0c0c0c"
-OverlayColor="black"
+TextColor="#978C8C"
+BackgroundColor="#2d2a2e"
+OverlayColor="#3F3A3F"
 OverlayOpacity=0.5
-DimColor="#999b9b"
+DimColor="#625A60"
 
 ## [Design]
 
@@ -17,7 +17,7 @@ InterfaceShadowOpacity="0.6"
 ## Double between 0 and 1. Alpha channel of the shadow behind the user and session selection background. Decrease or increase if it looks bad on your background.
 RoundCorners="20"
 ## Integer in pixels. Radius of the input fields and the login button. Empty for square. Can cause bad antialiasing of the fields.
-Font="Manrope"
+Font="Iosevka NFM"
 ## If you want to choose a custom font it will have to be available to the X root user. See https://wiki.archlinux.org/index.php/fonts#Manual_installation
 
 ## [Interface Behavior]
